--- a/css/framework.css
+++ b/css/framework.css
@@ -43,6 +43,9 @@
   position: relative;
   /* transition: .2s ;
   transition-delay: .8s; */
+  z-index: 3;
+  font-weight: bold;
+  font-size: 2rem;
 }
 
 .sect-heading::before {
@@ -98,3 +101,21 @@
   height: 100%;
   border-radius: 0;
 }
+
+.spikes {
+  position: relative;
+}
+
+.spikes::after {
+  content: "";
+  position: absolute;
+  right: 0;
+  width: 100%;
+  height: 30px;
+  z-index: 1;
+  background-image: 
+    linear-gradient(135deg, white 25%, transparent 25%),
+    linear-gradient(225deg, white 25%, transparent 25%);
+  background-size: 30px 30px;
+}
+
