--- a/css/main.css
+++ b/css/main.css
@@ -864,3 +864,62 @@ main img {
   color: var(--main-clr);
 }
 /* ! End Services */
+
+/* ! Start Our Skills */
+.our-skills .container {
+  display: flex;
+}
+
+.our-skills .container .img-box img {
+  max-width: 100%;
+}
+
+.our-skills .container .skills-box {
+  width: 60%;
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+}
+
+@media (max-width: 991px) {
+  .our-skills .container .img-box {
+    display: none;
+  }
+
+  .our-skills .container .skills-box {
+    width: 100%;
+  }
+}
+
+.our-skills .container .skills-box .skill {
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
+  gap: 1rem 0;
+  font-weight: bold;
+}
+
+.our-skills .skill p {
+  font-size: 1.2rem;
+}
+
+.our-skills .skill span {
+  font-size: .8rem;
+  padding: 2px 4px;
+  color: var(--main-clr);
+  border: 1px solid #dadada;
+  border-radius: 3px;
+}
+
+.our-skills .skill .progress-bar {
+  height: 35px;
+  background-color: var(--gray-200);
+  width: 100%;
+}
+
+.our-skills .skill .progress-bar div {
+  height: 100%;
+  width: attr(data-progress);
+  background-color: var(--main-clr);
+}
+/* ! End Our Skills */
