--- a/css/main.css
+++ b/css/main.css
@@ -12,6 +12,7 @@ html {
 
 :root {
   --main-clr: #2196f3;
+  --main-clr-dark: #1080db;
   --gray-100: #fafafa;
   --gray-200: #ececec;
   --gray-300: #777;
@@ -37,6 +38,10 @@ a {
 }
 
 img {
+  display: block;
+}
+
+span {
   display: block;
 }
 
@@ -1020,3 +1025,162 @@ main img {
   color: var(--gray-300);
 }
 /* ! End How It Works */
+
+/* ! Start Events */
+.events {
+  position: relative;
+  overflow: hidden;
+}
+
+.events .one{
+  left: -50px;
+  bottom: 10%;
+}
+
+.events .two{
+  right: -50px;
+  top: 30%;
+}
+
+.events .container {
+  
+}
+
+.events .row {
+  display: flex;
+  align-items: center;
+  gap: 2rem;
+  margin-bottom: 6rem;
+}
+
+.events .row .img-box {
+  flex: 1 1 40%;
+}
+
+.events .row .img-box img {
+  max-width: 100%;
+}
+
+.events .row .info-box {
+  flex: 1 1 65%;
+  display: flex;
+  flex-direction: column;
+  gap: 2rem;
+  text-align: center;
+}
+
+@media (max-width: 991px) {
+  .events .row .img-box {
+    display: none;
+  }
+
+  .events .row .info-box {
+    flex: 1 1 100%;
+  }
+}
+
+.events .row .info-box .count-down {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  gap: .5rem;
+}
+
+.events .row .info-box .count-down .box {
+  min-width: 80px;
+  border: 1px solid #dbdbdb;
+  border-radius: 5px;
+  background-color: white;
+  transition: border-color var(--transition-time);
+}
+
+.events .row .info-box .count-down .box:hover {
+  border-color: var(--main-clr);
+}
+
+.events .row .info-box .count-down .box p {
+  padding: .75rem 0;
+  font-size: 2.5rem;
+  color: var(--main-clr);
+  font-weight: bold;
+}
+
+.events .row .info-box .count-down .box span {
+  padding: .5rem 0;
+  font-size: .8rem;
+  border-top: 1px solid #dbdbdb;
+  transition: border-color var(--transition-time);
+}
+
+.events .row .info-box .count-down .box:hover span {
+  border-color: var(--main-clr)
+}
+
+.events .row .info-box .text {
+
+}
+
+.events .row .info-box .text h3 {
+  font-size: 2rem;
+  text-transform: capitalize;
+  margin-bottom: 1.6rem;
+}
+
+.events .row .info-box .text p {
+  font-size: 1.2rem;
+  line-height: 1.8;
+  color: var(--gray-300);
+}
+
+.events .sign-up {
+  width: 600px;
+  margin: 0 auto;
+  background-color: #f1f1f1;
+  padding: 2rem 2.5rem;
+  border-radius: 300px;
+  display: flex;
+  gap: 1.2rem;
+}
+
+.events .sign-up input[type="email"] {
+  flex: 1;
+  border: none;
+  padding: 1rem 1.5rem;
+  border-radius: 50px;
+  caret-color: var(--main-clr);
+  outline: none;
+}
+
+.events .sign-up input[type="email"]::placeholder {
+  text-transform: capitalize;
+}
+
+.events .sign-up button {
+  padding: 1rem 1.5rem;
+  background-color: var(--main-clr);
+  color: white;
+  border-radius: 50px;
+  text-transform: capitalize;
+  font-weight: bold;
+  transition: background-color var(--transition-time);
+}
+
+@media (max-width: 767px) {
+  .events .sign-up {
+    padding: 1rem;
+    flex-direction: column;
+    width: 100%;
+    border-radius: 0;
+  }
+
+  .events .sign-up button,
+  .events .sign-up input[type="email"] {
+    border-radius: 0;
+  }
+}
+
+
+.events .sign-up button:hover {
+  background-color: var(--main-clr-dark);
+}
+/* ! End Events */
