--- a/css/main.css
+++ b/css/main.css
@@ -1329,3 +1329,92 @@ main img {
   background-color: var(--main-clr);
 }
 /* ! end pricing plans */
+
+/* ! start top videos */
+.top-videos .holder {
+  display: flex;
+  flex-direction: column;
+  border: 1px solid #e2e2e2;
+}
+
+@media (min-width: 992px) {
+  .top-videos .holder {
+    flex-direction: row;
+  }
+}
+
+.top-videos .holder .videos {
+  flex: 1 1 25%;
+}
+
+.top-videos .holder .videos .top-vids {
+  background-color: #f4f4f4;
+  padding: 1.5rem 1.25rem;
+  font-weight: bold;
+  text-transform: capitalize;
+  display: flex;
+  justify-content: space-between;
+}
+
+.top-videos .holder .videos .top-vids p {
+
+}
+
+.top-videos .holder .videos .top-vids i {
+  
+}
+
+.top-videos .holder .videos .toggle-buttons {
+
+}
+
+.top-videos .holder .videos .toggle-buttons div {
+  padding: 1.3rem 1.25rem;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  gap: 1rem;
+  cursor: pointer;
+  transition: background-color var(--transition-time);
+}
+
+.top-videos .holder .videos .toggle-buttons div:hover {
+  background-color: #fafafa;
+}
+
+.top-videos .holder .videos .toggle-buttons div:not(:first-of-type) {
+  border-top: 1px solid #e2e2e2;
+}
+
+.top-videos .holder .videos .toggle-buttons div p {
+  transition: color var(--transition-time);
+}
+
+.top-videos .holder .videos .toggle-buttons div:hover p {
+  color: var(--main-clr);
+}
+
+.top-videos .holder .videos .toggle-buttons div span {
+  color: var(--gray-300);
+}
+
+.top-videos .holder .view {
+  flex: 1 1 75%;
+  padding: .75rem;
+  display: flex;
+  gap: .75rem;
+  flex-direction: column;
+  justify-content: space-between;
+  background-color: #e2e2e2;
+}
+
+.top-videos .holder .view img {
+  max-width: 100%;
+}
+
+.top-videos .holder .view .current-vid{
+  padding: 1.5rem 1rem;
+  background-color: white;
+}
+
+/* ! end top videos */
