--- a/css/framework.css
+++ b/css/framework.css
@@ -101,6 +101,15 @@
   border-radius: 0;
 }
 
+.heading-secondary {
+  width: fit-content;
+  margin: auto;
+  margin-bottom: 3.5rem;
+  text-transform: capitalize;
+  position: relative;
+  font-size: 2.5rem;
+}
+
 .spikes {
   position: relative;
 }
