--- a/css/main.css
+++ b/css/main.css
@@ -1640,3 +1640,125 @@ main img {
   font-weight: bold;
 }
 /* ! end request a discount */
+
+/* ! start footer */
+footer {
+  background-color: #191919;
+}
+
+footer .container {
+  color: #b9b9b9;
+  padding: 4.5rem 15px;
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+  gap: 2.5rem;
+}
+
+footer .container .socials {
+  display: flex;
+  flex-direction: column;
+  gap: 1.5rem 0;
+}
+
+footer .container .socials h3 {
+  font-size: 3rem;
+  color:white;
+}
+
+footer .container .socials .media {
+  display: flex;
+  gap: .75rem;
+}
+
+footer .container .socials .media a {
+  width: 50px;
+  height: 50px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: #313131;
+  font-size: 1.2rem;
+  transition: background-color var(--transition-time);
+}
+
+footer .container .socials .media a:first-of-type:hover {
+  background-color: rgb(0, 94, 255);
+}
+footer .container .socials .media a:nth-of-type(2):hover {
+  background-color: rgb(0, 195, 255);
+}
+footer .container .socials .media a:last-of-type:hover {
+  background-color: red;
+}
+
+footer .container .socials p {
+  line-height: 2;
+}
+
+footer .container .links a {
+  display: flex;
+  gap: 1rem;
+  padding: 1rem 0;
+  transition: all var(--transition-time);
+  transition-property:color, padding-left;
+}
+
+footer .container .links a:hover {
+  color: white;
+  padding-left: .5rem;
+}
+
+footer .container .links a:not(:last-of-type) {
+  border-bottom: 1px solid #444;
+}
+
+footer .container .links a i {
+  font-size: .9rem;
+  color: var(--main-clr);
+}
+
+footer .container .contact-info {
+  display: flex;
+  flex-direction: column;
+  gap: 2.5rem;
+}
+
+footer .container .contact-info .box {
+  display: flex;
+  align-items: center;
+  gap: 1rem;
+}
+
+footer .container .contact-info .box i {
+  font-size: 1.5rem;
+  color: var(--main-clr);
+}
+
+footer .container .contact-info .box .text {
+  line-height: 1.6;
+}
+
+footer .container .images .cont {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(70px, 1fr));
+  gap: .5rem;
+}
+
+footer .container .images img {
+  max-width: 100%;
+  border: 3px solid white;
+}
+
+footer .credit {
+  color: white;
+  padding: 1.5rem 0;
+  display: flex;
+  justify-content: center;
+  gap: .25rem;
+  border-top: 1px solid #444;
+}
+
+footer .credit a {
+  text-decoration: underline 1px dashed white;
+}
+/* ! end footer */
